	model.

	Several utility functions to compute fitted values from an ordination
	and corresponding residual lengths are provided, which me be useful
	for authors of other functions.

	'plot' and 'hist' methods produce density plots and histograms for
	'residLen' objects using base graphics.

	'densityplot' and 'histogram' methods for 'residLen' objects using
	Lattice graphics.

Version 0.6-7 (Closed Mon 13 Apr 2009) 

	* optima, tolerance: new methods to coerce objects of these classes
	to data frames.

	* distance: method = "kendall" was incorrectly computing the min of
	the x and y components in the dissimilarity.

Version 0.6-6 (Released to CRAN: Wed 25th Feb 2009)

	* optima, tolerance: New print methods for both functions. Returned 
	objects now have additional attributes.

	* join: new methods for 'head' and 'tail' to return the first/last
	few rows from each of the joined data sets. Handles cases where
	'split = FALSE' by calling the 'data.frame' method.

Version 0.6-5

	* wa: now computes tolerances and can perform tolerance downweighting
	in WA transfer functions. Contains several options to manage working
	tolerances used in the WA computations, including how to deal with
	species that have very small (narrow) tolerances.

	The actual tolerances and working values are returned from wa().

	* optima, tolerance: two new user visible functions to compute weighted
	average optima and tolerance ranges from species abundances and 
	associated environmental data.

Version 0.6-4

	* Datasets: Version 1.7 of the North American Modern Pollen 
	Database has been added to 'analogue'. The data are contained
	in four datasets: Pollen, Biome, Climate and Location, containing
	the pollen counts on 134 taxa, vegetation classification, 32
	climatic variables and location (latitude/longitude) respectively
	on 4833 sampling locations in North America and Greenland.

	* plot.logitreg: adjusted the correction to the degrees of freedom